--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
+  "scripts": {
+    "dev": "nodemon ./src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "express": "^4.18.2",
+    "nodemon": "^2.0.22",
     "pg": "^8.11.0"
   }
 }
