--- a/package.json
+++ b/package.json
@@ -1,1 +1,19 @@
-{"name":"api-hamburgueria-ck","version":"1.0.0","description":"Api de dados do app HamburgueriaCK","main":"index.js","type":"module","scripts":{"dev":"nodemon ./src/index.js","test":"echo \"Error: no test specified\" && exit 1"},"dependencies":{"bcrypt":"^5.1.0","express":"^4.18.2","jsonwebtoken":"^9.0.0","multer":"^1.4.5-lts.1","nodemon":"^2.0.22","pg":"^8.11.0"}}
+{
+ "name":"api-hamburgueria-ck",
+ "version":"1.0.0",
+    "description":"Api de dados do app HamburgueriaCK",
+    "main":"index.js",
+    "type":"module",
+ "scripts":{
+ "dev":"nodemon ./src/index.js",
+ "test":"echo \"Error: no test specified\" && exit 1"
+},
+ "dependencies":{
+    "bcrypt":"^5.1.0",
+    "express":"^4.18.2",
+    "jsonwebtoken":"^9.0.0",
+    "multer":"^1.4.5-lts.1",
+    "nodemon":"^2.0.22",
+    "pg":"^8.11.0"
+    }
+}
