--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
  "version": "1.0.0",
  "description": "Api de dados do app HamburgueriaCK",
  "main": "index.js",
- "type": "module",
+ "type": "commonjs",
  "scripts": {
   "dev": "nodemon ./src/index.js",
   "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,6 +13,7 @@
   "bcryptjs": "^2.4.3",
   "cookie": "^0.5.0",
   "cookie-parser": "^1.4.6",
+  "dotenv": "^16.1.4",
   "express": "^4.18.2",
   "jsonwebtoken": "^9.0.0",
   "multer": "^1.4.5-lts.1",
