--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
  "main": "index.js",
  "type": "commonjs",
  "scripts": {
-  "dev": "nodemon ./src/index.js",
+  "start": "nodemon ./src/index.js",
   "test": "echo \"Error: no test specified\" && exit 1"
  },
  "dependencies": {
