--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
  "type": "commonjs",
  "scripts": {
   "start": "nodemon ./src/index.js",
+  "build": "npm install",
   "test": "echo \"Error: no test specified\" && exit 1"
  },
  "dependencies": {
