--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
  "main": "index.js",
  "type": "commonjs",
  "scripts": {
-  "start": "nodemon ./src/index.js",
+  "start": "node ./src/index.js",
   "build": "npm install",
   "test": "echo \"Error: no test specified\" && exit 1"
  },
