--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
  "main": "index.js",
  "type": "commonjs",
  "scripts": {
-  "start": "node ./src/index.js",
+  "start": "nodemon ./src/index.js",
   "build": "npm install",
   "test": "echo \"Error: no test specified\" && exit 1"
  },
@@ -22,3 +22,5 @@
   "pg": "^8.11.0"
  }
 }
+
+
